--- a/src/features/Pomodoro/Timer/Timer.css
+++ b/src/features/Pomodoro/Timer/Timer.css
@@ -97,18 +97,52 @@
     .play-button:active {
         background-color: #91cbf2;
        }
+
+       .pomodoro-button:active {
+        background-color: #91cbf2;
+        color: #0c3d63;
+    }
     
  }
  
  
  /*Samsung screens that have hover but don't behave like they do */
  @media (hover:hover) and (max-width: 500px) {
-    .play-button:active {
+    .play-button:hover {
         background-color: #91cbf2;
+       }
+
+       .pomodoro-button:hover {
+        background-color: #91cbf2;
+        color: #0c3d63;
        }
  }
 
- @media (max-width: 1200px) and (max-height: 900px) {
+
+ @media (max-width: 650px) {
+    #pomodoro-coin-p {
+        display: flex;
+    }
+ }
+
+
+ @media (max-height: 750px) {
+    #pomodoro-coin-p {
+        display: flex;
+    }
+}
+/*
+@media (min-width: 260px) and (max-width: 450px) {
+
+    #pomodoro-coin-p {
+        display: flex;
+    }
+    
+}
+
+ 
+
+ @media (max-width: 1100px) and (min-height: 550px) and (max-height: 800px) {
     .control-timer-buttons {
         margin-top: 0;
     }
@@ -116,9 +150,10 @@
     #mode-string {
         margin-bottom: 0;
     }
-
+ } 
+ 
+ @media (max-height: 800px) {
     #pomodoro-coin-p {
         display: flex;
     }
-
- }
+ }*/
