--- a/src/features/Pomodoro/Settings/Settings.css
+++ b/src/features/Pomodoro/Settings/Settings.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-height: 90%;
+    max-height: fit-content;
 }
 
 .pomodoro-settings-container label {
