Complete responsive design

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  width: 100%;
 }
 
 .content {
@@ -7,5 +8,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
+  width: 100%;
+  position: relative;
 }
