--- a/src/features/Tasks/TaskItem/TaskItem.css
+++ b/src/features/Tasks/TaskItem/TaskItem.css
@@ -1,7 +1,6 @@
 .to-do-element, .reward-item {
     display: flex;
     margin-bottom: 1rem;
-    width: 30%;
     align-items: center;
     min-height: 3rem;
     min-width: 17rem;
@@ -50,20 +49,27 @@
     padding: 10px;
 }
 
-
-
+.view-task, .view-reward {
+    display: inline-block;
+    transition: transform 0.2s ease;
+}
 
 .view-task:hover, .view-reward:hover {
-    font-size: 1.1rem;
-    color: #0c3d63;
+    transform: scale(1.05);
 }
 
 .deadline-details {
     margin: 0;
-    font-size: .6rem;
+    font-size: .8rem;
     display: flex;
     justify-content: space-between;
     width: 100%;
+    margin-top: 1rem;
+}
+
+.deadline-details p {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .status-box {
