--- a/src/features/Inventory/InventoryPage.css
+++ b/src/features/Inventory/InventoryPage.css
@@ -2,19 +2,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: fit-content;
     height: fit-content;
+    margin-top: 2rem;
     background-color: #135382;
 }
 
-.inventory-box h1 {
-    padding: 0;
-    margin: 0;
-    font-size: 2rem;
-    color: aliceblue;
-}
+
 
 .inventory-empty-message {
     color: aliceblue;
     margin-top: 0;
+}
+
+.back-icon {
+    position: fixed;
+    top: 4.5rem;
+    margin-left: 1rem;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    font-size: 3rem;
+    color: lightblue;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    padding: 0;
+    border-radius: 50%;
 }
