--- a/src/features/Pomodoro/PomodoroPage.css
+++ b/src/features/Pomodoro/PomodoroPage.css
@@ -5,8 +5,7 @@
     justify-content: center;
     align-items: center;
     color: aliceblue;
-    width: 70%;
-    height: 100%;
+    width: 100%;
 }
 
 .pomodoro-container h1 {
@@ -49,7 +48,9 @@
     .settings-icon {
         font-size: 3rem;
     }
-
+    .settings-button {
+        margin-right: 0;
+    }
 
 }
 
@@ -91,6 +92,12 @@
 
     .pomodoro-container {
         margin-top: 5rem;
+    }
+}
+
+@media (max-width: 700px) and (max-height: 700px) {
+    .pomodoro-container {
+        margin-top: 1rem;
     }
 }
 
