--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+html, body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,6 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #135382;
   font-family: "Nunito", sans-serif;
+  box-sizing: border-box;
+  width: 100%;
 }
 
 code {
