--- a/src/sharedStyles/sharedStyles.css
+++ b/src/sharedStyles/sharedStyles.css
@@ -18,6 +18,7 @@
     align-items: center;
     margin-left: auto;
     justify-self: flex-end;
+    margin-right: 0.5rem;
 }
 
 
@@ -60,7 +61,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    color: aliceblue;
 }
 
 .coin-icon {
@@ -127,6 +128,7 @@
     cursor: pointer;
     padding: 0;
     border-radius: 50%;
+    z-index: 500;
 }
 
 .add-task,
@@ -177,7 +179,7 @@
 
 
 @media (max-width: 350px) {
-    .task-history-icon {
+    .task-history-icon, .inventory-link, .inventory-history-icon {
         margin-right: .15rem;
     }
 
@@ -185,11 +187,12 @@
         font-size: 2.5rem;
     }
 
-    .add-task button {
+    .add-task button, .add-reward button {
         font-size: 3.5rem;
+        background-color: #135382;
     }
 
-    .add-task {
+    .add-task, .add-reward {
         margin-right: 0;
     }
 
@@ -204,9 +207,15 @@
     }
 }
 
+@media (max-width: 450px) {
+    .add-reward button {
+        background-color: #135382;
+    }
+}
+
 /* Screens that have hover and are not Samsung (laptops etc) */
 @media (hover:hover) and (min-width: 501px) {
-    .add-task button:active {
+    .add-task button:active, .add-reward button:active {
         background-color: #0c3d63;
     }
 
@@ -222,15 +231,15 @@
 /* Screens that don't have hover (most mobile devices except Samsung) */
 /* :hover behaves as active */
 @media (hover: none) {
-    .add-task button:hover {
+    .add-task button:active, .add-reward button:active {
         background-color: #0c3d63;
     }
 
-    .task-history-icon:hover {
+    .task-history-icon:active {
         background-color: #0c3d63;
     }
 
-    .back-icon:hover {
+    .back-icon:active {
         background-color: #0c3d63;
     }
 }
@@ -238,7 +247,7 @@
 
 /*Samsung screens that have hover but don't behave like they do */
 @media (hover:hover) and (max-width: 500px) {
-   .add-task button:active {
+   .add-task button:active, .add-reward button:active {
     background-color: #0c3d63;
    }
 
