--- a/src/features/Tasks/TaskItem/TaskItem.css
+++ b/src/features/Tasks/TaskItem/TaskItem.css
@@ -23,7 +23,8 @@
     font-size: 1rem;
     background: linear-gradient(to bottom right, aliceblue, #6fa8dc);
     padding: .5rem;
-    width: 100%
+    min-width: 15rem;
+    max-width: 15rem;
 }
 
 .view-task {
@@ -74,7 +75,7 @@
 
 .status-box {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between !important;
     width: 100%;
 }
 
@@ -84,6 +85,7 @@
     align-items: center;
     font-weight: bolder;
 }
+
 
 #overdue-text {
     color: #c11b1d;
@@ -100,6 +102,7 @@
 .coin-penalty-box {
     display: flex;
     align-items: center;
+    align-self: flex-end;
 }
 
 #completed-text {
