--- a/src/features/Rewards/ViewReward/ViewReward.css
+++ b/src/features/Rewards/ViewReward/ViewReward.css
@@ -32,6 +32,7 @@
 }
 
 #not-enough-coins {
-    margin-bottom: 1rem;
-    margin-top: 0;
+    margin-bottom: 0;
+    margin-top: 1rem;
+    color: #c11b1d;
 }
