Fix css for consistency

--- a/src/features/Inventory/ViewInventoryItem/ViewInventoryItem.css
+++ b/src/features/Inventory/ViewInventoryItem/ViewInventoryItem.css
@@ -1,3 +1,12 @@
+.view-inventory-item-container {
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+
 .use-button {
     border: none;
     background-color: lightblue;
