--- a/src/features/Inventory/InventoryPage.css
+++ b/src/features/Inventory/InventoryPage.css
@@ -29,3 +29,25 @@
     padding: 0;
     border-radius: 50%;
 }
+
+@media (max-width: 350px) {
+    .inventory-box h1 {
+        font-size: 1.4rem
+    }
+}
+
+
+@media (min-width: 351px) and (max-width: 450px) {
+  
+    .inventory-box h1 {
+        font-size: 1.6rem;
+    }
+}
+
+@media (min-width: 451px) and (max-width: 650px) {
+    .inventory-box h1 {
+        font-size: 1.8rem;
+    }
+}
+
+
