--- a/src/features/Pomodoro/Settings/Settings.css
+++ b/src/features/Pomodoro/Settings/Settings.css
@@ -4,6 +4,11 @@
     flex-direction: column;
     align-items: center;
     max-height: fit-content;
+    padding: 1.5rem
+}
+
+.pomodoro-settings-container h4 {
+    color: #135382;
 }
 
 .pomodoro-settings-container label {
@@ -13,6 +18,10 @@
     justify-content: center;
     align-items: center;
     color: #135382;
+}
+
+#first-pomodoro-settings-label {
+    margin-top: 0;
 }
 
 .slider {
