--- a/src/features/Rewards/ViewReward/ViewReward.css
+++ b/src/features/Rewards/ViewReward/ViewReward.css
@@ -15,6 +15,11 @@
     color: #0c3d63;
 }
 
+.view-rewards-container p {
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
 .view-rewards-container img {
     align-self: center;
     margin-top: 1em;
