--- a/src/features/Tasks/TaskForm/TaskForm.css
+++ b/src/features/Tasks/TaskForm/TaskForm.css
@@ -1,6 +1,5 @@
 .form-container {
     background-color: aliceblue;
-    padding: 2rem;
     border-radius: .5rem;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Shadow effect */
     display: flex;
@@ -14,6 +13,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 25rem;
+}
+
+.form-container h4 {
+    margin-bottom: 0;
 }
 
 
