--- a/src/sharedStyles/sharedStyles.css
+++ b/src/sharedStyles/sharedStyles.css
@@ -42,26 +42,16 @@
 
 .coin-count-header {
    margin-bottom: .5rem;
-
-    /* Add padding for spacing */
     text-align: center;
-    /* Center align text */
     border-radius: 2rem;
-        /* Add shadow */
 }
 
 .coin-count-header h1 {
     font-size: 1.5rem;
-    /* Adjust font size */
     font-weight: bold;
-    /* Make the text bold */
-    /* Text color */
     text-transform: uppercase;
-    /* Convert text to uppercase */
     margin-top: .5rem;
     margin-bottom: .5rem;
-    /* Remove margin to avoid extra spacing */
-    /* Add any additional styling to make it creative */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -80,16 +70,14 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    /* Semi-transparent black overlay */
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1000;
-    /* Ensure it appears above other content */
 }
 
-.overlay-card {
-    padding: 2rem 2rem;
+.overlay-card-1 {
+    padding: 1rem 0rem;
 }
 
 .negative-coins {
