--- a/src/features/Rewards/ItemForm/ItemForm.css
+++ b/src/features/Rewards/ItemForm/ItemForm.css
@@ -18,6 +18,9 @@
     background-color: lightblue;
 }
 
+.icon-choices {
+    margin-bottom: 1rem;
+}
 
 .reward-form-container {
     background-color: aliceblue;
