--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,12 @@ html, body {
   width: 100%;
 }
 
+button, a {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
