Change command button color

--- a/src/sharedStyles/sharedStyles.css
+++ b/src/sharedStyles/sharedStyles.css
@@ -1,6 +1,6 @@
 .command-button {
     border: none;
-    background-color: #91c5f2;
+    background-color: #acd6fc;
     border-radius: 1rem;
     padding: .8rem;
     margin-left: 1rem;
