--- a/src/features/Rewards/ItemForm/ItemForm.css
+++ b/src/features/Rewards/ItemForm/ItemForm.css
@@ -1,21 +1,29 @@
 .icon-choices {
     width: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .reward-form-container h4 {
     margin-bottom: 0;
     display: flex;
+
 }
 
 .icon-choices button {
     margin: 1rem .6rem;
     background-color: transparent;
-    border: 1px solid lightblue;
+    border: 1px solid #acd6fc;
     cursor: pointer;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .icon-choices button.selected {
-    background-color: lightblue;
+    background-color: #acd6fc;
 }
 
 .icon-choices {
@@ -30,6 +38,12 @@
     display: flex;
     flex-direction: column;
     width: fit-content;
-    min-width: 20rem;
-    height: fit-content;
+}
+
+@media (max-height: 750px) {
+   .reward-form-container {
+    max-height: 500px; 
+    overflow-y: auto; 
+    max-width: 70%;
+   }
 }
