--- a/src/features/Pomodoro/Settings/SettingsMobile/SettingsMobile.css
+++ b/src/features/Pomodoro/Settings/SettingsMobile/SettingsMobile.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     border-radius: 1rem;
+    padding: 1.5rem;
 }
 .pomodoro-mobile-settings h4 {
     color: #0c3d63;
@@ -27,7 +28,7 @@
 .pomodoro-mobile-settings button p {
     margin-top: 0;
     margin-bottom: 0;
-
+    line-height: 1.2rem;
 }
 
 
@@ -46,7 +47,12 @@
 
 .pomodoro-settings-command-buttons {
     padding-bottom: 1.5rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
     margin-top: 1rem;
 }
+
+#selling-price-coins-p {
+    display: flex;
+    align-items: center;
+    
+}
+
