--- a/src/features/Tasks/OverdueTasks/OverdueTasks.css
+++ b/src/features/Tasks/OverdueTasks/OverdueTasks.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: fit-content;
     height: fit-content;
     background-color: aliceblue;
@@ -36,8 +37,8 @@
     margin-top: 2rem;
 }
 
-@media (max-width: 350px) {
+@media (max-width: 375px) {
     .overdue-container {
-        width: 100%;
+        max-width: 70%;
     }
 }
