--- a/src/sharedStyles/sharedStyles.css
+++ b/src/sharedStyles/sharedStyles.css
@@ -99,7 +99,7 @@
     display: flex;
     align-items: center;
     font-size: 3rem;
-    color: lightblue;
+    color: #acd6fc;
     border: none;
     background-color: transparent;
     cursor: pointer;
@@ -114,7 +114,7 @@
     display: flex;
     align-items: center;
     font-size: 3rem;
-    color: lightblue;
+    color: #acd6fc;
     border: none;
     background-color: transparent;
     cursor: pointer;
@@ -140,7 +140,7 @@
     display: flex;
     align-items: center;
     font-size: 4rem;
-    color: lightblue;
+    color: #acd6fc;
     border: none;
     background-color: transparent;
     cursor: pointer;
